add enclosure type on front end!!!
