# api-contracts/enclosures-service/types.ts
@@ -3,10 +3,128 @@
  * Do not make direct changes to the file.
  */
 
-export type paths = Record<string, never>;
+export interface paths {
+    "/api/v1/enclosure-types": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Enclosure Types */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["EnclosureType"][];
+                    };
+                };
+            };
+        };
+        put?: never;
+        /** Add Enclosure Type */
+        post: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody: {
+                content: {
+                    "application/json": components["schemas"]["EnclosureTypeBase"];
+                };
+            };
+            responses: {
+                /** @description Created */
+                201: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content?: never;
+                };
+            };
+        };
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/api/v1/enclosure-types/keys": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Enclosure Type Keys */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": string[];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+}
 export type webhooks = Record<string, never>;
 export interface components {
-    schemas: never;
+    schemas: {
+        EnclosureType: {
+            /** @description The type of the enclosure */
+            type: string;
+            /** @description Description of the type */
+            description: string;
+            createdAt?: components["schemas"]["Instant"];
+            updatedAt?: components["schemas"]["Instant"];
+        };
+        EnclosureTypeBase: {
+            /**
+             * Enclosure Type
+             * @description The type of the enclosure
+             */
+            type: string;
+            /**
+             * Enclosure Type Description
+             * @description Description of the type
+             */
+            description: string;
+        };
+        /** Format: date-time */
+        Instant: string;
+    };
     responses: never;
     parameters: never;
     requestBodies: never;
