# types/enclosures-service.ts
@@ -1,0 +1,5 @@
+import { components } from "@/api-contracts/enclosures-service/types";
+
+// Enclosure Type
+export type EnclosureType = components["schemas"]["EnclosureType"];
+export type EnclosureTypeBase = components["schemas"]["EnclosureTypeBase"];
